syntax = "proto3";

package v2ray.core.proxy.shadowtls;
option csharp_namespace = "V2Ray.Core.Proxy.ShadowTLS";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/shadowtls";
option java_package = "com.v2ray.core.proxy.shadowtls";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "common/net/address.proto";

message ServerConfig {
  option (v2ray.core.common.protoext.message_opt).type = "inbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "shadow-tls";

  uint32 version = 1;
  string password = 2;
  repeated User users = 3;
  HandshakeConfig handshake = 4;
  map<string, HandshakeConfig> handshake_for_server_name = 5;
  bool strict_mode = 6;
  string detour = 7;
}

message HandshakeConfig {
  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
}

message User {
  string email = 1;
  string password = 2;
  int32 level = 3;
}

message ClientConfig {
  option (v2ray.core.common.protoext.message_opt).type = "outbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "shadow-tls";

  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  uint32 version = 3;
  string password = 4;
}
