syntax = "proto3";

package v2ray.core.transport.internet.reality;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Reality";
option go_package = "github.com/v2fly/v2ray-core/v5/transport/internet/reality";
option java_package = "com.v2ray.core.transport.internet.reality";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "security";
  option (v2ray.core.common.protoext.message_opt).short_name = "reality";

  bool show = 1;
  string dest = 2;
  string type = 3;
  uint64 xver = 4;
  repeated string server_names = 5;
  bytes private_key = 6;
  bytes min_client_ver = 7;
  bytes max_client_ver = 8;
  uint64 max_time_diff = 9;
  repeated bytes short_ids = 10;

  string Fingerprint = 21;
  string server_name = 22;
  bytes public_key = 23;
  bytes short_id = 24;
  string spider_x = 25;
  repeated int64 spider_y = 26;
  bytes version = 99;
}
